force-app/main/default/objects/Personel__c/Personel__c.object-meta.xml
<CustomObject>
    <label>Personel</label>
    <nameField>
        <label>Adı Soyadı</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>