force-app/main/default/objects/Personel__c/fields/AYRILDI__c.field-meta.xml
<CustomField>
    <fullName>AYRILDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AYRILDI</label>
    <type>Checkbox</type>
</CustomField>