force-app/main/default/objects/Personel__c/fields/Cikis__c.field-meta.xml
<CustomField>
    <fullName>Cikis__c</fullName>
    <label>Cikis</label>
    <type>Date</type>
</CustomField>