force-app/main/default/objects/Personel__c/fields/Dogum_Gunu__c.field-meta.xml
<CustomField>
    <fullName>Dogum_Gunu__c</fullName>
    <formula>RIGHT(TEXT(Date_of_Birth__c ), 2)&amp; &apos; &apos; &amp;CASE(MONTH(Date_of_Birth__c) , 01, &apos;Ocak&apos;, 02, &apos;Şubat&apos;, 03, &apos;Mart&apos;, 04, &apos;Nisan&apos;, 05, &apos;Mayıs&apos;, 06, &apos;Haziran&apos;, 07, &apos;Temmuz&apos;, 08, &apos;Ağustos&apos;, 09, &apos;Eylül&apos;, 10, &apos;Ekim&apos;, 11, &apos;Kasım&apos;, 12 , &apos;Aralık&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dogum Gunu</label>
    <type>Text</type>
</CustomField>