force-app/main/default/objects/Personel__c/fields/Dogum_gunu_eksi_1__c.field-meta.xml
<CustomField>
    <fullName>Dogum_gunu_eksi_1__c</fullName>
    <formula>DAY(Date_of_Birth__c -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dogum gunu eksi 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>