force-app/main/default/objects/Personel__c/fields/Giris__c.field-meta.xml
<CustomField>
    <fullName>Giris__c</fullName>
    <label>Giris</label>
    <type>Date</type>
</CustomField>