force-app/main/default/objects/Personel__c/fields/mont__c.field-meta.xml
<CustomField>
    <fullName>mont__c</fullName>
    <formula>MONTH( Date_of_Birth__c  - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mont</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>