force-app/main/default/objects/Personel__c/fields/SIP_No__c.field-meta.xml
<CustomField>
    <fullName>SIP_No__c</fullName>
    <label>SIP No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>