force-app/main/default/objects/Personel__c/fields/Toplam_Arama_S_resi__c.field-meta.xml
<CustomField>
    <fullName>Toplam_Arama_S_resi__c</fullName>
    <label>Toplam Arama Süresi</label>
    <summarizedField>Performans__c.G_nl_k_Arama_Say_s__c</summarizedField>
    <summaryForeignKey>Performans__c.Personel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>