force-app/main/default/objects/Personel__c/fields/Toplam_Konu_ma_S_resi__c.field-meta.xml
<CustomField>
    <fullName>Toplam_Konu_ma_S_resi__c</fullName>
    <label>Toplam Konuşma Süresi</label>
    <summarizedField>Performans__c.Gunluk_Konusma_Suresi__c</summarizedField>
    <summaryForeignKey>Performans__c.Personel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>