force-app/main/default/objects/Personel__c/fields/Toplam_Sat_Adedi__c.field-meta.xml
<CustomField>
    <fullName>Toplam_Sat_Adedi__c</fullName>
    <label>Toplam Satış Adedi</label>
    <summarizedField>Performans__c.G_nl_k_Sat_Adedi__c</summarizedField>
    <summaryForeignKey>Performans__c.Personel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>