force-app/main/default/objects/Personel__c/listViews/ten_Ayr_lanlar.listView-meta.xml
<ListView>
    <fullName>ten_Ayr_lanlar</fullName>
    <columns>NAME</columns>
    <columns>NickName__c</columns>
    <columns>Telefon__c</columns>
    <columns>SIP_No__c</columns>
    <columns>E_mail__c</columns>
    <columns>Giris__c</columns>
    <columns>Cikis__c</columns>
    <columns>Dogum_Gunu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AYRILDI__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>İşten Ayrılanlar</label>
</ListView>